simplifying setup and example files; using new attribute assignment syntax

--- a/includes/setup.cfg
+++ b/includes/setup.cfg
@@ -1,6 +1,5 @@
 [DatabaseConnection]
 db_adapter      = MySqlAdapter
 db_host         = localhost
-db_user         = username
+db_user         = admin
 db_pass         = password
-db_flags        = null
